--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,8 +1,4 @@
-@import '_profiles',
-        '_header',
-        '_navigation',
-        '_images',
-        '_buttons',
-        '_sections',
-        '_alert',
+@import '_header',
+        '_card',
+        '_overlay',
         '_typography';
