--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -2,24 +2,12 @@
   box-sizing: border-box;
 }
 
-h1, h2, h3 {
-  font-weight: normal;
-}
-
-strong {
-  font-weight: bolder;
-}
-
 body {
   width: 100%;
-  height: 100%;
-  max-width: 100vw;
+  min-height: 100%;
 }
 
 main {
-  max-width: 100vw;
-}
-
-.hide {
-  display: none;
+  width: 100%;
+  z-index: 0;
 }
