--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -1,35 +1,24 @@
 main {
-  grid-area: main-region;
-  @include grid($rows: repeat(3, auto));
-}
-
-body {
-  @include allmedia("grid-template-columns", $columns-body);
-  @include grid($layout:  "main-header" "navbar" "main-region", $align: center, $columns: repeat(3, 100%));
-  @include media('tablet') {
-    @include grid($layout:  "main-header main-header"
-                            "navbar main-region", $align: center, $rows: $rows-body);
-  }
-}
-
-.wrapper__main {
-  display: grid;
-  width: 100%;
-  @include grid($layout:  "traffic"
-                          "daily-traffic"
-                          "mobile-users"
-                          "social-stats"
-                          "new-members"
-                          "recent-activity"
-                          "message-user"
-                          "settings",
-                $columns: repeat(1, 1fr));
+  background-color: $color-bg-lighter;
+  font-family: $font-family-primary;
+  padding: $padding-main;
+  @include grid($columns: repeat(1, 1fr));
   @include media("tablet") {
-    @include grid($layout:  "traffic traffic"
-                            "daily-traffic mobile-users"
-                            "social-stats social-stats"
-                            "new-members recent-activity"
-                            "message-user settings",
-                  $columns: repeat(2, 1fr));
+    @include grid($columns: repeat(2, 1fr));
+  }
+  @include media("desktop") {
+    @include grid($columns: repeat(3, 1fr));
+  }
+  grid-column-gap: $gutter-card;
+  grid-row-gap: $gutter-card;
+  .user__name {
+    margin-bottom: 0;
+  }
+  .user__city {
+    margin-top: 0;
+  }
+  .user__image {
+    width: 100%;
+    @include allmedia("height", $sizes-img);
   }
 }
